fix: changed style of q2 question component (selected option in black text; spacing for footer)

--- a/src/components/Q2/Q2HowTo/Q2HowTo.scss
+++ b/src/components/Q2/Q2HowTo/Q2HowTo.scss
@@ -11,6 +11,9 @@
         width: 100%;
         background-color: $seconday-color-lightgray;
         border-radius: .5rem;
+        @media (min-width: 499px) {
+            height: 12rem;
+        }
     }
 
     &__text-container {
@@ -48,8 +51,8 @@
 }
 
 .Polaris-HorizontalStack {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 0.5rem;
 }
 
 .Polaris-Icon {
